# opencv_stl_forwarder

./: CMakeLists.txt  README.md
.github/workflows/: build_test.yml
benchmark/: CMakeLists.txt  bench-main.cpp
include/opencv_stl_forwarder/detail/: forward_macros.hpp  pointer-tuple-replacer.hpp  util.hpp  variadic-continuous-checker.hpp
include/opencv_stl_forwarder/stl/: algorithm.hpp
test/: CMakeLists.txt  test-algorithm.cpp  test-header.hpp  test-stl-forward.cpp  test_stl_forward.cpp
